app title update

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <nav class="navbar">
 <div class="container-fluid">
-    <h2 class="text-light" id="headTitle">FLATDANGO</h2>
+    <h2 class="text-light" id="headTitle">DANGO MOVIES</h2>
 </div>
 
 <div class="container-fluid">
